L06 - adding put/delete review
